<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_camera"
                android:title="@string/camera" />
                <!--android:icon="@drawable/ic_menu_camera"-->
        <item
                android:id="@+id/nav_gallery"
                android:title="@string/gallery" />
                <!--android:icon="@drawable/ic_menu_gallery"-->
        <item
                android:id="@+id/nav_slideshow"
                android:title="@string/slideshow" />
                <!--android:icon="@drawable/ic_menu_slideshow"-->

        <item
                android:id="@+id/nav_manage"
                android:title="@string/tools" />
                <!--android:icon="@drawable/ic_menu_manage"-->
    </group>
</menu>