<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".NewCustomerFragment">

    <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity"
            tools:layout_editor_absoluteY="25dp">

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/name"
                android:hint="@string/hintName"
                android:gravity="center_vertical|center"
                app:layout_constraintBottom_toTopOf="@+id/surname"
                android:layout_marginBottom="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="85dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="84dp" android:importantForAutofill="no" tools:targetApi="o"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/surname"
                android:hint="@string/hintSurname"
                android:gravity="center_vertical|center"
                app:layout_constraintEnd_toEndOf="@+id/name"
                android:layout_marginBottom="2dp"
                app:layout_constraintBottom_toTopOf="@+id/subscription" android:importantForAutofill="no" tools:targetApi="o"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/subscription"
                android:hint="@string/months_of_subscription"
                android:gravity="center_vertical|center"
                app:layout_constraintEnd_toEndOf="@+id/surname"
                app:layout_constraintBottom_toTopOf="@+id/go"
                android:layout_marginBottom="5dp" android:importantForAutofill="no" tools:targetApi="o"/>
        <Button
                android:text="@string/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/go"
                app:layout_constraintStart_toStartOf="@+id/subscription"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@+id/subscription"/>
        <Button
                android:text="@string/erase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/erase"
                app:layout_constraintEnd_toEndOf="@+id/subscription"
                android:layout_marginStart="40dp"
                app:layout_constraintStart_toEndOf="@+id/go"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/subscription"/>
        <TextView
                android:layout_width="346dp"
                android:layout_height="187dp"
                android:id="@+id/results"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="19dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="19dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintBottom_toTopOf="@+id/name"/>
    </android.support.constraint.ConstraintLayout>

</FrameLayout>