<?xml version="1.0" encoding="utf-8"?>
<!-- Use DrawerLayout as root container for activity -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                        xmlns:app="http://schemas.android.com/apk/res-auto"
                                        xmlns:tools="http://schemas.android.com/tools" android:id="@+id/drawer_layout"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:fitsSystemWindows="true">

    <FrameLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

    </FrameLayout>

    <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->
    <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity"
            tools:layout_editor_absoluteY="25dp">

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/name"
                android:hint="@string/hintName"
                android:gravity="center_vertical|center"
                app:layout_constraintBottom_toTopOf="@+id/surname"
                android:layout_marginBottom="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="85dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="84dp" android:importantForAutofill="no" tools:targetApi="o"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/surname"
                android:hint="@string/hintSurname"
                android:gravity="center_vertical|center"
                app:layout_constraintEnd_toEndOf="@+id/name"
                android:layout_marginBottom="2dp"
                app:layout_constraintBottom_toTopOf="@+id/subscription" android:importantForAutofill="no" tools:targetApi="o"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/subscription"
                android:hint="@string/months_of_subscription"
                android:gravity="center_vertical|center"
                app:layout_constraintEnd_toEndOf="@+id/surname"
                app:layout_constraintBottom_toTopOf="@+id/go"
                android:layout_marginBottom="5dp" android:importantForAutofill="no" tools:targetApi="o"/>
        <Button
                android:text="@string/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/go"
                app:layout_constraintStart_toStartOf="@+id/subscription"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@+id/subscription"/>
        <Button
                android:text="@string/erase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/erase"
                app:layout_constraintEnd_toEndOf="@+id/subscription"
                android:layout_marginStart="40dp"
                app:layout_constraintStart_toEndOf="@+id/go"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/subscription"/>
        <TextView
                android:layout_width="346dp"
                android:layout_height="187dp"
                android:id="@+id/results"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="19dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="19dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintBottom_toTopOf="@+id/name"/>
    </android.support.constraint.ConstraintLayout>

    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
    <android.support.design.widget.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:menu="@menu/drawer_view"
            app:headerLayout="@layout/nav_header"/>

</android.support.v4.widget.DrawerLayout>